--- a/app/src/main/res/layout/their_message.xml
+++ b/app/src/main/res/layout/their_message.xml
@@ -11,7 +11,7 @@
         android:id="@+id/avatar"
         android:layout_alignParentLeft="true"
         android:scaleType="centerInside"
-        android:background="@drawable/circle"
+        android:background="@drawable/bot"
         android:layout_width="34dp"
         android:layout_height="34dp" />
 
