--- a/app/src/main/res/layout/start_page.xml
+++ b/app/src/main/res/layout/start_page.xml
@@ -131,4 +131,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.835" />
 
+    <Button
+        android:id="@+id/manageBtn"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:text="관리자"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.944"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
